data/derived/fa15/progs/unify/prog2130.ml.out
Characters 100-103:
  | _ -> f x
         ^^^
Error: This expression has type int but an expression was expected of type
         int * 'a
